tests/errors/path_matches_invalid_pattern.dang
# Path.matches raises on an invalid glob pattern.
let ok = Path("x").matches("[")
